[gd_scene load_steps=26 format=2]

[ext_resource path="res://Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://BulletManager.gd" type="Script" id=3]
[ext_resource path="res://Actors/Coal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/FallingObjectType.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Toy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Spawner.gd" type="Script" id=7]
[ext_resource path="res://Background.tscn" type="PackedScene" id=8]
[ext_resource path="res://Actors/Stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://OutOfBounds.gd" type="Script" id=10]
[ext_resource path="res://HUD.gd" type="Script" id=11]
[ext_resource path="res://assets/Kenney Pixel Square.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Actors/PowerUp.tscn" type="PackedScene" id=13]
[ext_resource path="res://ExplosionManager.gd" type="Script" id=14]
[ext_resource path="res://Happiness.tscn" type="PackedScene" id=15]
[ext_resource path="res://Happiness.gd" type="Script" id=16]
[ext_resource path="res://PlayButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://Transition.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/exmas_main_game.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/Start game button.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/Happiness Increase.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/Power up.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/Toy Hit.wav" type="AudioStream" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 503.159, 30.3322 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 12 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 0.840942 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -5.0
autoplay = true

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 479, 570 )

[node name="BulletManager" type="Node2D" parent="."]
pause_mode = 1
position = Vector2( 480, 570 )
script = ExtResource( 3 )

[node name="ExplosionManager" type="Node2D" parent="."]
pause_mode = 1
script = ExtResource( 14 )

[node name="Spawner" type="Node2D" parent="."]
pause_mode = 1
script = ExtResource( 7 )
Toy = ExtResource( 6 )
Coal = ExtResource( 4 )
PowerUp = ExtResource( 13 )

[node name="ToySpawnerTimer" type="Timer" parent="Spawner"]
wait_time = 1.419
autostart = true

[node name="CoalSpawnerTimer" type="Timer" parent="Spawner"]
wait_time = 5.0
autostart = true

[node name="DiffcultyTimer" type="Timer" parent="Spawner"]
wait_time = 20.0
autostart = true

[node name="PowerUp" type="Timer" parent="Spawner"]
wait_time = 45.0
one_shot = true
autostart = true

[node name="OutOfBounds" type="Area2D" parent="."]
pause_mode = 1
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds"]
position = Vector2( 480, 670.024 )
shape = SubResource( 1 )

[node name="FallingObjectType" parent="." instance=ExtResource( 5 )]
pause_mode = 1

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 11 )

[node name="Score" type="Label" parent="HUD"]
margin_left = 140.0
margin_top = 568.446
margin_right = 179.589
margin_bottom = 621.446
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Happiness" type="Label" parent="HUD"]
visible = false
margin_left = 800.0
margin_top = 568.446
margin_right = 179.0
margin_bottom = 600.446
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HUD/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOver/CenterContainer"]
margin_left = 300.0
margin_top = 271.0
margin_right = 660.0
margin_bottom = 369.0

[node name="Label" type="Label" parent="HUD/GameOver/CenterContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 14.0

[node name="Play" parent="HUD/GameOver/CenterContainer/VBoxContainer" instance=ExtResource( 17 )]

[node name="Transition" parent="HUD" instance=ExtResource( 18 )]

[node name="StartGameSound" type="AudioStreamPlayer2D" parent="HUD"]
stream = ExtResource( 20 )
volume_db = -4.489
attenuation = 0.0206173

[node name="Stats" parent="." instance=ExtResource( 9 )]
position = Vector2( 480, 570 )

[node name="Happiness" parent="." instance=ExtResource( 15 )]
pause_mode = 2
position = Vector2( 774.687, 592.387 )
script = ExtResource( 16 )

[node name="ToyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -20.0

[node name="PowerUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -20.0

[node name="YayHappiness" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
[connection signal="timeout" from="Spawner/ToySpawnerTimer" to="Spawner" method="_on_ToySpawnerTimer_timeout"]
[connection signal="timeout" from="Spawner/CoalSpawnerTimer" to="Spawner" method="_on_CoalSpawnerTimer_timeout"]
[connection signal="timeout" from="Spawner/DiffcultyTimer" to="Spawner" method="_on_DiffcultyTimer_timeout"]
[connection signal="timeout" from="Spawner/PowerUp" to="Spawner" method="_on_PowerUp_timeout"]
[connection signal="fade_finished" from="HUD/Transition" to="HUD" method="_on_Transition_fade_finished"]
